# Bitey-Frank

./: .gitignore  README.md  aussie_clock.py  birthdays.py  bot.py  ctx-command-template.js  image_tools.py  main.py  messageResponses.txt  package-lock.json  package.json  pyproject.toml  youtubeNotifications.py  youtube_tools.py  yt_checker.py
.github/: FUNDING.yml
commands/: Edit_Frank_Message.py  React_As_Frank.py  Reply_As_Frank.py  Send_Message_As_Frank.py  __init__.py  beajpeg.py  birthday.py  birthdays.csv  channelstat.py  frankjpeg.py  membercount.py  modapp.py  now.py  play.py  player.py  poll.py  reboot.py  rolladie.py  setfrankresponse.py  simplepoll.py  singalong.py  template.py  update.py  whowon.py
src/: index.js  init-commands.js  python-loops.py  reload-commands.js
src/commands/: template.js
src/commands/chat/: beajpeg.js  birthday.js  embed.js  frankjpeg.js  franksnark.js  modapp.js  newgpt.js  patreon.js  poll.js  update.js  winners.js
src/commands/ctx-menu/: Edit-Frank-Message.js  React-As-Frank.js  Reply-As-Frank.js  Send-Message-As-Frank.js
src/commands/fun/: beajpeg.js  birthday.js  frankjpeg.js  franksnark.js
src/commands/tools/: Reply-As-Frank.js  Send-Message-As-Frank.js  poll.js  update.js  winners.js
src/events/: ClientReady.js  InteractionCreate.js  MessageCreate.js
src/templates/: command-template.js  ctx-command-template.js
youtube/: DankPods.txt  GarbageTime420.txt  the.drum.thing..txt
